# ADiffView

./: .clang-format  .gitignore  ADiffView  ADiffView.¶  ADiffView_gcc  ADiffView_gcc_pre_tab_rendering  CMakeLists.txt  LICENSE  LICENSE-3RD-PARTY  README.md
src/: CMakeLists.txt  main.cpp
src/amigautils/: AmigaFile.cpp  AmigaFile.h  Clipboard.cpp  Clipboard.h  MemoryPool.cpp  MemoryPool.h  MessageBox.cpp  MessageBox.h  StopWatch.cpp  StopWatch.h
src/application/: ADiffViewArgs.cpp  ADiffViewArgs.h  ADiffViewPens.cpp  ADiffViewPens.h  ADiffViewPorts.cpp  ADiffViewPorts.h  ADiffViewSettings.cpp  ADiffViewSettings.h  ADiffView_rev.h  ADiffView_rev.i  Application.cpp  Application.h  DiffDocument.cpp  DiffDocument.h  DiffProgressReporter.cpp  DiffProgressReporter.h  DiffWorker.cpp  DiffWorker.h  DiffWorkerProgressReporter.cpp  DiffWorkerProgressReporter.h  TextFinder.cpp  TextFinder.h
src/commands/: CmdChangeTabulatorWidth.cpp  CmdChangeTabulatorWidth.h  CmdCloseWindow.cpp  CmdCloseWindow.h  CmdCompare.cpp  CmdCompare.h  CmdCopySelection.cpp  CmdCopySelection.h  CmdDiff.cpp  CmdDiff.h  CmdEditFile.cpp  CmdEditFile.h  CmdFileRequester.cpp  CmdFileRequester.h  CmdFindNext.cpp  CmdFindNext.h  CmdFindPrev.cpp  CmdFindPrev.h  CmdNavigateBase.cpp  CmdNavigateBase.h  CmdNavigateFirstDiff.cpp  CmdNavigateFirstDiff.h  CmdNavigateLastDiff.cpp  CmdNavigateLastDiff.h  CmdNavigateNextDiff.cpp  CmdNavigateNextDiff.h  CmdNavigatePrevDiff.cpp  CmdNavigatePrevDiff.h  CmdOpenWindow.cpp  CmdOpenWindow.h  CmdQuit.cpp  CmdQuit.h  CmdRequester.cpp  CmdRequester.h  CmdWindowTitleQuickMsg.cpp  CmdWindowTitleQuickMsg.h  CommandBase.cpp  CommandBase.h
src/diffengine/: DiffEngine.cpp  DiffEngine.h  DiffFileBase.cpp  DiffFileBase.h  DiffInputFileAmiga.cpp  DiffInputFileAmiga.h  DiffInputFileBase.cpp  DiffInputFileBase.h  DiffInputFileLinux.cpp  DiffInputFileLinux.h  DiffLine.cpp  DiffLine.h  DiffOutputFileAmiga.cpp  DiffOutputFileAmiga.h  DiffOutputFileBase.cpp  DiffOutputFileBase.h  DiffOutputFileLinux.cpp  DiffOutputFileLinux.h  SelectableDiffFile.cpp  SelectableDiffFile.h
src/diffengine/test_boost/: DiffEngine_test_boost.cpp  DiffEngine_test_boost.pro  DiffWindowTextAreaMock.cpp  DiffWindowTextAreaMock.h  ProgressReporter.cpp  ProgressReporter.h
src/diffengine/test_plain/: DiffEngine_test_plain.cpp  DiffEngine_test_plain.pro
src/menus/: MenuBase.cpp  MenuBase.h  MenuDiffWindow.cpp  MenuDiffWindow.h  MenuFilesWindow.cpp  MenuFilesWindow.h
src/model/: Pair.cpp  Pair.h  Rect.cpp  Rect.h
src/screen/: OpenClonedWorkbenchScreen.cpp  OpenClonedWorkbenchScreen.h  OpenJoinedPublicScreen.cpp  OpenJoinedPublicScreen.h  OpenScreenBase.cpp  OpenScreenBase.h
src/textsearch/: DiffFileSearchEngine.cpp  DiffFileSearchEngine.h  DiffFileSearchEngineSteadily.cpp  DiffFileSearchEngineSteadily.h  DiffFileSearchResult.cpp  DiffFileSearchResult.h  SearchOptions.h
src/textselect/: BlockwiseSelection.cpp  BlockwiseSelection.h  DynamicSelection.cpp  DynamicSelection.h  SelectionBase.cpp  SelectionBase.h  StaticSelection.cpp  StaticSelection.h  TextSelection.cpp  TextSelection.h  TextSelectionLine.cpp  TextSelectionLine.h  TextSelectionRange.cpp  TextSelectionRange.h
src/windows/: DiffWindow.cpp  DiffWindow.h  DiffWindowRastports.cpp  DiffWindowRastports.h  DiffWindowTextArea.cpp  DiffWindowTextArea.h  FilesWindow.cpp  FilesWindow.h  ProgressWindow.cpp  ProgressWindow.h  ScrollbarWindow.cpp  ScrollbarWindow.h  SearchWindow.cpp  SearchWindow.h  WindowBase.cpp  WindowBase.h
src/worker/: ProgressMessage.h  ProgressReporter.cpp  ProgressReporter.h  WorkerBase.cpp  WorkerBase.h  WorkerStartupMsg.h
testfiles/: 01_right.txt  02_right.txt  03_var2_right.txt  05_left.txt  06_left.txt  06_right.txt  09_ofw-original.cpp  10_right.txt  12a_left.txt  12a_right.txt  13_6000_left.cpp  14_FB101-02-Complete-Left.txt  (+55 more)
(+76 files in other folders)
